--- a/index.html
+++ b/index.html
@@ -1935,22 +1935,22 @@
       const leaders = [
         { name: 'Evelyn', base: 22773973 },
         { name: 'crypto_boy88', base: 17974026 },
-        { name: 'Julia', base: 14865206 },
+        { name: 'Юлия', base: 14865206 },
         { name: 'Andrew', base: 13964927 },
-        { name: 'Rana', base: 11865962 },
-        { name: 'Raj', base: 8484001 },
-        { name: 'Li Wei', base: 7778291 },
+        { name: 'رنا', base: 11865962 },
+        { name: 'राज', base: 8484001 },
+        { name: '李伟', base: 7778291 },
         { name: 'Olivia', base: 7007971 },
         { name: 'ghost2025', base: 6800549 },
-        { name: 'Saeed', base: 6485428 },
-        { name: 'Arjun', base: 6085391 },
+        { name: 'سعيد', base: 6485428 },
+        { name: 'अर्जुन', base: 6085391 },
         { name: 'Elena', base: 5563901 },
         { name: 'user_01', base: 5284061 },
-        { name: 'Deepa', base: 4953091 },
-        { name: 'Rakesh', base: 4769164 },
+        { name: 'दीपा', base: 4953091 },
+        { name: 'राकेश', base: 4769164 },
         { name: 'Isabella', base: 4384091 },
         { name: 'Mohammed', base: 3272901 },
-        { name: 'Xu Lei', base: 1996380 },
+        { name: '徐磊', base: 1996380 },
         { name: 'Mia', base: 1585395 },
         { name: 'bitBoss', base: 1256842 }
       ];
